HelloUltraviolet/Fixtures/RejectedSource/Expressions/CallArgType/Source/Main.uv
//! Rejected expression specimen for a call argument type mismatch.

public procedure oneArg(value: i32) -> i32 {
    return value
}

public procedure callArgTypeReference() -> i32 {
    return oneArg(true)
}
